// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSelect JOption destroy destroy 1`] = `
Object {
  "components": Object {
    "JOption": Object {
      "_Ctor": Object {
        "0": [Function],
        "1": [Function],
        "105": [Function],
        "187": [Function],
        "239": [Function],
        "320": [Function],
        "332": [Function],
        "344": [Function],
        "356": [Function],
        "368": [Function],
        "380": [Function],
        "393": [Function],
        "405": [Function],
        "53": [Function],
      },
      "beforeDestroy": [Function],
      "computed": Object {
        "currentLabel": [Function],
        "itemSelected": [Function],
        "optionSize": [Function],
      },
      "created": [Function],
      "data": [Function],
      "inject": Object {
        "select": Object {
          "from": "select",
        },
      },
      "methods": Object {
        "handleOptionClick": [Function],
        "hoverItem": [Function],
        "queryChange": [Function],
      },
      "mixins": Array [
        Object {
          "methods": Object {
            "broadcast": [Function],
            "dispatch": [Function],
          },
        },
      ],
      "name": "JOption",
      "props": Object {
        "created": Object {
          "type": [Function],
        },
        "label": Object {
          "type": Array [
            [Function],
            [Function],
          ],
        },
        "size": Object {
          "type": [Function],
        },
        "value": Object {
          "required": true,
        },
      },
      "render": [Function],
    },
    "JSelect": Object {
      "$_vueTestUtils_original": [Circular],
      "_Ctor": Object {
        "0": [Function],
        "320": [Function],
        "332": [Function],
        "344": [Function],
        "356": [Function],
        "368": [Function],
        "380": [Function],
        "393": [Function],
        "405": [Function],
      },
      "components": Object {
        "JInput": Object {
          "_Ctor": Object {
            "0": [Function],
            "1": [Function],
            "105": [Function],
            "117": [Function],
            "127": [Function],
            "13": [Function],
            "137": [Function],
            "147": [Function],
            "157": [Function],
            "167": [Function],
            "177": [Function],
            "187": [Function],
            "199": [Function],
            "209": [Function],
            "219": [Function],
            "229": [Function],
            "23": [Function],
            "239": [Function],
            "250": [Function],
            "260": [Function],
            "270": [Function],
            "280": [Function],
            "290": [Function],
            "300": [Function],
            "310": [Function],
            "320": [Function],
            "33": [Function],
            "332": [Function],
            "344": [Function],
            "356": [Function],
            "368": [Function],
            "380": [Function],
            "393": [Function],
            "405": [Function],
            "43": [Function],
            "53": [Function],
            "65": [Function],
            "75": [Function],
            "85": [Function],
            "95": [Function],
          },
          "computed": Object {
            "inputDisabled": [Function],
            "inputReadonly": [Function],
            "inputSize": [Function],
            "nativeInputValue": [Function],
            "showClear": [Function],
            "showPasswordVisible": [Function],
          },
          "data": [Function],
          "inheritAttrs": false,
          "install": [Function],
          "methods": Object {
            "blur": [Function],
            "calcIconOffset": [Function],
            "focus": [Function],
            "getInput": [Function],
            "handleBlur": [Function],
            "handleChange": [Function],
            "handleClear": [Function],
            "handleCompositionEnd": [Function],
            "handleCompositionStart": [Function],
            "handleFocus": [Function],
            "handleInput": [Function],
            "handlePasswordVisible": [Function],
            "setNativeInputValue": [Function],
            "updateIconOffset": [Function],
          },
          "mounted": [Function],
          "name": "JInput",
          "props": Object {
            "clearable": Object {
              "default": false,
              "type": [Function],
            },
            "disabled": Object {
              "default": false,
              "type": [Function],
            },
            "readonly": Object {
              "default": false,
              "type": [Function],
            },
            "round": Object {
              "default": false,
              "type": [Function],
            },
            "showPassword": Object {
              "default": false,
              "type": [Function],
            },
            "size": Object {
              "type": [Function],
            },
            "tabindex": Object {
              "type": [Function],
            },
            "type": Object {
              "default": "text",
              "type": [Function],
            },
            "value": Object {
              "type": Array [
                [Function],
                [Function],
              ],
            },
          },
          "render": [Function],
          "updated": [Function],
          "watch": Object {
            "nativeInputValue": [Function],
          },
        },
        "JOption": Object {
          "_Ctor": Object {
            "0": [Function],
            "1": [Function],
            "105": [Function],
            "187": [Function],
            "239": [Function],
            "320": [Function],
            "332": [Function],
            "344": [Function],
            "356": [Function],
            "368": [Function],
            "380": [Function],
            "393": [Function],
            "405": [Function],
            "53": [Function],
          },
          "beforeDestroy": [Function],
          "computed": Object {
            "currentLabel": [Function],
            "itemSelected": [Function],
            "optionSize": [Function],
          },
          "created": [Function],
          "data": [Function],
          "inject": Object {
            "select": Object {
              "from": "select",
            },
          },
          "methods": Object {
            "handleOptionClick": [Function],
            "hoverItem": [Function],
            "queryChange": [Function],
          },
          "mixins": Array [
            Object {
              "methods": Object {
                "broadcast": [Function],
                "dispatch": [Function],
              },
            },
          ],
          "name": "JOption",
          "props": Object {
            "created": Object {
              "type": [Function],
            },
            "label": Object {
              "type": Array [
                [Function],
                [Function],
              ],
            },
            "size": Object {
              "type": [Function],
            },
            "value": Object {
              "required": true,
            },
          },
          "render": [Function],
        },
        "JOptionMenu": Object {
          "_Ctor": Object {
            "0": [Function],
            "1": [Function],
            "105": [Function],
            "117": [Function],
            "127": [Function],
            "13": [Function],
            "137": [Function],
            "147": [Function],
            "157": [Function],
            "167": [Function],
            "177": [Function],
            "187": [Function],
            "199": [Function],
            "209": [Function],
            "219": [Function],
            "229": [Function],
            "23": [Function],
            "239": [Function],
            "250": [Function],
            "260": [Function],
            "270": [Function],
            "280": [Function],
            "290": [Function],
            "300": [Function],
            "310": [Function],
            "320": [Function],
            "33": [Function],
            "332": [Function],
            "344": [Function],
            "356": [Function],
            "368": [Function],
            "380": [Function],
            "393": [Function],
            "405": [Function],
            "43": [Function],
            "53": [Function],
            "65": [Function],
            "75": [Function],
            "85": [Function],
            "95": [Function],
          },
          "components": Object {
            "JScrollbar": Object {
              "_Ctor": Object {
                "0": [Function],
                "1": [Function],
                "105": [Function],
                "117": [Function],
                "127": [Function],
                "13": [Function],
                "137": [Function],
                "147": [Function],
                "157": [Function],
                "167": [Function],
                "177": [Function],
                "187": [Function],
                "199": [Function],
                "209": [Function],
                "219": [Function],
                "229": [Function],
                "23": [Function],
                "239": [Function],
                "250": [Function],
                "260": [Function],
                "270": [Function],
                "280": [Function],
                "290": [Function],
                "300": [Function],
                "310": [Function],
                "320": [Function],
                "33": [Function],
                "332": [Function],
                "344": [Function],
                "356": [Function],
                "368": [Function],
                "380": [Function],
                "393": [Function],
                "405": [Function],
                "43": [Function],
                "53": [Function],
                "65": [Function],
                "75": [Function],
                "85": [Function],
                "95": [Function],
              },
              "components": Object {
                "Bar": Object {
                  "_Ctor": Object {
                    "0": [Function],
                    "1": [Function],
                    "105": [Function],
                    "117": [Function],
                    "127": [Function],
                    "13": [Function],
                    "137": [Function],
                    "147": [Function],
                    "157": [Function],
                    "167": [Function],
                    "177": [Function],
                    "187": [Function],
                    "199": [Function],
                    "209": [Function],
                    "219": [Function],
                    "229": [Function],
                    "23": [Function],
                    "239": [Function],
                    "250": [Function],
                    "260": [Function],
                    "270": [Function],
                    "280": [Function],
                    "290": [Function],
                    "300": [Function],
                    "310": [Function],
                    "320": [Function],
                    "33": [Function],
                    "332": [Function],
                    "344": [Function],
                    "356": [Function],
                    "368": [Function],
                    "380": [Function],
                    "393": [Function],
                    "405": [Function],
                    "43": [Function],
                    "53": [Function],
                    "65": [Function],
                    "75": [Function],
                    "85": [Function],
                    "95": [Function],
                  },
                  "computed": Object {
                    "bar": [Function],
                  },
                  "props": Object {
                    "vertical": Object {
                      "type": [Function],
                    },
                  },
                  "render": [Function],
                },
              },
              "computed": Object {
                "wrap": [Function],
              },
              "data": [Function],
              "methods": Object {
                "handleScroll": [Function],
              },
              "name": "JScrollbar",
              "props": Object {
                "tag": Object {
                  "default": "div",
                  "type": [Function],
                },
                "viewClass": Object {},
                "wrapClass": Object {},
              },
              "render": [Function],
            },
          },
          "computed": Object {
            "popperClass": [Function],
          },
          "data": [Function],
          "mixins": Array [
            Object {
              "beforeDestroy": [Function],
              "data": [Function],
              "methods": Object {
                "appendArrow": [Function],
                "createPopper": [Function],
                "destroyPopper": [Function],
                "updatePopper": [Function],
              },
              "props": Object {
                "appendToBody": Object {
                  "default": true,
                  "type": [Function],
                },
                "offset": Object {
                  "default": [Function],
                  "type": [Function],
                },
                "placement": Object {
                  "default": "bottom",
                  "type": [Function],
                },
                "visibleArrow": Object {
                  "default": true,
                  "type": [Function],
                },
              },
              "watch": Object {
                "showPopper": Object {
                  "handler": [Function],
                  "user": true,
                },
              },
            },
          ],
          "mounted": [Function],
          "name": "JOptionMenu",
          "render": [Function],
          "watch": Object {
            "$parent.inputWidth": [Function],
          },
        },
        "JTag": Object {
          "_Ctor": Object {
            "380": [Function],
          },
          "computed": Object {
            "tagSize": [Function],
          },
          "install": [Function],
          "methods": Object {
            "handleClick": [Function],
            "handleClose": [Function],
            "handleMouseOut": [Function],
            "handleMouseOver": [Function],
          },
          "name": "JTag",
          "props": Object {
            "active": Object {
              "type": [Function],
            },
            "closable": Object {
              "type": [Function],
            },
            "disable": Object {
              "type": [Function],
            },
            "size": Object {
              "type": [Function],
            },
          },
          "render": [Function],
        },
      },
      "computed": Object {
        "debounce": [Function],
        "emptyText": [Function],
        "readonly": [Function],
        "selectDisabled": [Function],
        "selectSize": [Function],
        "showClose": [Function],
        "showNewOption": [Function],
      },
      "created": [Function],
      "data": [Function],
      "directives": Object {
        "clickoutside": Object {
          "bind": [Function],
          "unbind": [Function],
        },
      },
      "install": [Function],
      "methods": Object {
        "clearSelected": [Function],
        "deleteTag": [Function],
        "emitChange": [Function],
        "getOption": [Function],
        "getSlots": [Function],
        "handleBlur": [Function],
        "handleClose": [Function],
        "handleFocus": [Function],
        "handleInput": [Function],
        "handleOptionHover": [Function],
        "handleOptionSelect": [Function],
        "handleQueryChange": [Function],
        "managePlaceholder": [Function],
        "onInputChange": [Function],
        "onOptionDestroy": [Function],
        "resetHoverIndex": [Function],
        "resetInputHeight": [Function],
        "setSelected": [Function],
        "setSoftFocus": [Function],
        "toggleMenu": [Function],
      },
      "mixins": Array [
        Object {
          "methods": Object {
            "broadcast": [Function],
            "dispatch": [Function],
          },
        },
      ],
      "mounted": [Function],
      "name": "JSelect",
      "props": Object {
        "allowCreate": Object {
          "default": false,
          "type": [Function],
        },
        "clearable": Object {
          "default": false,
          "type": [Function],
        },
        "disabled": Object {
          "type": [Function],
        },
        "filterable": Object {
          "default": false,
          "type": [Function],
        },
        "multiple": Object {
          "default": false,
          "type": [Function],
        },
        "placeholder": Object {
          "default": "请选择",
          "type": [Function],
        },
        "popperClass": Object {
          "type": [Function],
        },
        "remote": Object {
          "default": false,
          "type": [Function],
        },
        "remoteMethod": Object {
          "type": [Function],
        },
        "size": Object {
          "type": [Function],
        },
        "value": Object {
          "required": true,
          "type": Array [
            [Function],
            [Function],
          ],
        },
      },
      "provide": [Function],
      "render": [Function],
      "watch": Object {
        "hoverIndex": [Function],
        "placeholder": [Function],
        "value": [Function],
        "visible": [Function],
      },
    },
  },
  "data": [Function],
  "methods": Object {
    "setOption": [Function],
  },
  "render": [Function],
}
`;

exports[`JSelect JOption itemSelected multiple choice 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">1</li>
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">2</li>
          <li class="j_option_menu_list_item">3</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption itemSelected single choice 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">1</li>
          <li class="j_option_menu_list_item">2</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption label no pass label 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item">1</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption label pass label 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item">黄金</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption mouseenter event mouseenter event 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">1</li>
          <li class="j_option_menu_list_item j_option_menu_list_item_hover">2</li>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption queryChange queryChange 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">1</li>
          <li class="j_option_menu_list_item">2</li>
          <li class="j_option_menu_list_item">3</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect JOption size large size 1`] = `<li class="j_option_menu_list_item j_option_menu_list_item_large">1</li>`;

exports[`JSelect JOption size small size 1`] = `<li class="j_option_menu_list_item j_option_menu_list_item_small">1</li>`;

exports[`JSelect allowCreate no pass allowCreate 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect allowCreate pass allowCreate 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect emptyText empty text element not show 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect emptyText no match data 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect emptyText no option 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect emptyText options length no equal 1 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect extra test hoverIndex 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input is_focus"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect extra test optionMenu width 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none; width: 0px;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect extra test select JInput vModel 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect extra test select handleClose 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect multiple choice clearable no pass clearabel 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><span class="j_tag j_tag_small">1<span class="j_tag_close"><i class="j_tag_close_fix j-icon_tag_close"></i></span></span></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice clearable pass clearable 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><span class="j_tag j_tag_small">1<span class="j_tag_close"><i class="j_tag_close_fix j-icon_tag_close"></i></span></span></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_tag_close j_input_icon_gesture"></i></span></div>
</div>
`;

exports[`JSelect multiple choice clearable pass clearable and showClose is false 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><span class="j_tag j_tag_small">1</span></div>
  <div class="j_input is_focus"><input type="text" disabled="disabled" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice create create and have default value 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><span class="j_tag j_tag_small">1<span class="j_tag_close"><i class="j_tag_close_fix j-icon_tag_close"></i></span></span><span class="j_tag j_tag_small">2<span class="j_tag_close"><i class="j_tag_close_fix j-icon_tag_close"></i></span></span></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice create create and no have default value 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item">1</li>
          <li class="j_option_menu_list_item">2</li>
          <li class="j_option_menu_list_item">3</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect multiple choice create create and value is string 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect multiple choice delete tag event delete tag event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice filterable pass filterable 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect multiple choice filterable queryElement blur event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice filterable queryElement focus event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice filterable queryElement input event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input is_focus"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice filterable queryElement keyup event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice option select event option select event 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"><span class="j_tag j_tag_small">1<span class="j_tag_close"><i class="j_tag_close_fix j-icon_tag_close"></i></span></span><input class="j_select_tags_input" style="max-width: -30px; width: 0.01%;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice placeholder no pass placeholder 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice placeholder pass placeholder 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择选项" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice placeholder placeholder change 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请准确选择选项" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect multiple choice size large size 1`] = `<input class="j_select_tags_input j_select_tags_input_large" style="max-width: -30px; width: 0.01%;">`;

exports[`JSelect multiple choice size small size 1`] = `<input class="j_select_tags_input j_select_tags_input_small" style="max-width: -30px; width: 0.01%;">`;

exports[`JSelect multiple choice value pass  value 1`] = `
<div class="j_select">
  <div class="j_select_tags" style="max-width: -30px;"></div>
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix" style="height: 0px;"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect remote and remoteMethod no pass remote and remoteMethod 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect remote and remoteMethod pass remote and remoteMethod 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice clearable click close element 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_hover">1</li>
          <li class="j_option_menu_list_item">2</li>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice clearable no pass clearabel 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice clearable pass clearable 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_tag_close j_input_icon_gesture"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice clearable pass clearable and showClose is false 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" disabled="disabled" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice create blur event 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice create create 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item">1</li>
          <li class="j_option_menu_list_item">2</li>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice create focus event 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice create option select event option select event 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" placeholder="2" class="j_input_inner j_input_inner_suffix" readonly="readonly"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice create scopedSlots prefix 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_prefix j_input_inner_suffix"><span class="j_input_icon j_input_prefix"><i>prefix</i></span><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice create scopedSlots suffix 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i>suffix</i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice disabled no pass disabled 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice disabled pass disabled 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" disabled="disabled" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice filterable keyup event 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix" readonly="readonly"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice filterable keyup event query equal selectedLabel 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" placeholder="请选择" class="j_input_inner j_input_inner_suffix" readonly="readonly"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice filterable no pass filterable 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice filterable pass filterable 1`] = `
<div class="j_select">
  <div class="j_input is_focus"><input type="text" placeholder="1" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_select_reverse j_input_icon_gesture j_select_caret"></i></span></div>
</div>
`;

exports[`JSelect single choice placeholder no pass placeholder 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice placeholder pass placeholder 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择选项" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice popperClass no pass popperClass 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice popperClass pass popperClass 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu popper_class" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice size large size 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_large j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty j_select_empty_large">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice size small size 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_small j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <p class="j_select_empty j_select_empty_small">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSelect single choice value pass  value 1`] = `
<div class="j_select">
  <div class="j_input"><input type="text" readonly="readonly" placeholder="请选择" class="j_input_inner j_input_inner_suffix"><span class="j_input_icon j_input_suffix"><i class="j-icon_down_arrow j_input_icon_gesture j_select_caret"></i></span></div>
  <div class="j_option_menu" style="display: none;">
    <div class="j_scrollbar">
      <div class="j_scrollbar_wrap j_scrollbar_hidden_default j_option_menu_list_wrap">
        <ul class="j_option_menu_list">
          <li class="j_option_menu_list_item j_option_menu_list_item_selected">1</li>
          <li class="j_option_menu_list_item">2</li>
          <p class="j_select_empty">无数据</p>
        </ul>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_horizontal">
        <div class="j_scroll_bar_thumb"></div>
      </div>
      <div class="j_scrollbar_bar j_scrollbar_bar_vertical">
        <div class="j_scroll_bar_thumb"></div>
      </div>
    </div>
  </div>
</div>
`;
